fixed alignment issues on some cards

--- a/css/addonStyleSheet.css
+++ b/css/addonStyleSheet.css
@@ -119,3 +119,8 @@ nav{
     padding: 2%;
     margin: .5%;
 }
+
+/*LOL*/
+.champion-lore{
+    text-align: center;
+}
